--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="qr_size">QR size: %d</string>
     <string name="bar_height">Bar height: %d</string>
     <string name="bar_width">Bar width: %d</string>
+    <string name="alignment">Alignment</string>
+    <string name="barcode_text_position">Text position</string>
 
     <string name="bold">Bold</string>
     <string name="italic">Italic</string>
