--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="add_3_line_space">Add 3 Line space</string>
 
     <string name="select_printer">Select Printer</string>
+    <string name="get_printer_serial">Get Printer Serial</string>
     <string name="print_sample">Print Sample</string>
     <string name="print_text">Print Text</string>
     <string name="print_qr_code">Print QR Code</string>
